--- a/saqaf.html
+++ b/saqaf.html
@@ -7,21 +7,23 @@
     </colgroup>
     <thead>
       <tr style="height:21pt">
-        <th scope="col" style="vertical-align:top;padding:5pt 5pt 5pt 5pt;overflow:hidden;overflow-wrap:break-word;"
+        <th scope="col"
+          style="border-left:solid #000000 1pt;border-right:solid #000000 1pt;border-bottom:solid #000000 1pt;border-top:solid #000000 1pt;vertical-align:top;padding:5pt 5pt 5pt 5pt;overflow:hidden;overflow-wrap:break-word;"
           rowspan="5">
           <p style="line-height:1.2;text-align: center;margin-top:0pt;margin-bottom:0pt;" dir="ltr">
             <span
               style="font-size: 11pt; font-family: Arial; color: rgb(0, 0, 0); background-color: transparent; font-weight: 400; font-style: normal; font-variant: normal; text-decoration: none; vertical-align: baseline; white-space: pre-wrap;">
               <span style="border:none;display:inline-block;overflow:hidden;width:71px;height:97px;">
                 <img style="margin-left: 0px; margin-top: 0px;"
-                  src="/zm/ImageSignature?fileName=1683006113069053_1242424430.png&amp;accountId=1432297000000002002&amp;storeName=60010481625&amp;frm=s"
+                  src="https://raw.githubusercontent.com/idealdistribution/email-signature/main/logo.png"
                   width="71" height="97">
               </span>
             </span>
             <br>
           </p>
         </th>
-        <th scope="col" style="vertical-align:top;padding:5pt 5pt 5pt 5pt;overflow:hidden;overflow-wrap:break-word;"
+        <th scope="col"
+          style="border-left:solid #000000 1pt;border-right:solid #000000 1pt;border-bottom:solid #000000 1pt;border-top:solid #000000 1pt;vertical-align:top;padding:5pt 5pt 5pt 5pt;overflow:hidden;overflow-wrap:break-word;"
           colspan="2">
           <p style="line-height: 1.2; margin-top: 0pt; margin-bottom: 0pt; text-align: left;" dir="ltr"
             class="align-left">
@@ -41,20 +43,22 @@
         </th>
       </tr>
       <tr style="height:15.75pt">
-        <th scope="col" style="vertical-align:top;padding:5pt 5pt 5pt 5pt;overflow:hidden;overflow-wrap:break-word;">
+        <th scope="col"
+          style="border-left:solid #000000 1pt;border-right:solid #000000 1pt;border-bottom:solid #000000 1pt;border-top:solid #000000 1pt;vertical-align:top;padding:5pt 5pt 5pt 5pt;overflow:hidden;overflow-wrap:break-word;">
           <p style="line-height:1.2;text-align: center;margin-top:0pt;margin-bottom:0pt;" dir="ltr">
             <span
               style="font-size: 11pt; font-family: Arial; color: rgb(0, 0, 0); background-color: transparent; font-weight: 400; font-style: normal; font-variant: normal; text-decoration: none; vertical-align: baseline; white-space: pre-wrap;">
               <span style="border:none;display:inline-block;overflow:hidden;width:14px;height:15px;">
                 <img style="margin-left: 0px; margin-top: 0px;"
-                  src="/zm/ImageSignature?fileName=1683006113049045_1242424430.png&amp;accountId=1432297000000002002&amp;storeName=60010481625&amp;frm=s"
+                  src="https://raw.githubusercontent.com/idealdistribution/email-signature/main/icon-phone.png"
                   width="14" height="15">
               </span>
             </span>
             <br>
           </p>
         </th>
-        <th scope="col" style="vertical-align:top;padding:5pt 5pt 5pt 5pt;overflow:hidden;overflow-wrap:break-word;">
+        <th scope="col"
+          style="border-left:solid #000000 1pt;border-right:solid #000000 1pt;border-bottom:solid #000000 1pt;border-top:solid #000000 1pt;vertical-align:top;padding:5pt 5pt 5pt 5pt;overflow:hidden;overflow-wrap:break-word;">
           <p style="line-height: 1.2; margin-top: 0pt; margin-bottom: 0pt; text-align: left;" dir="ltr"
             class="align-left">
             <span
@@ -73,20 +77,22 @@
         </th>
       </tr>
       <tr style="height:24pt">
-        <th scope="col" style="vertical-align:top;padding:5pt 5pt 5pt 5pt;overflow:hidden;overflow-wrap:break-word;">
+        <th scope="col"
+          style="border-left:solid #000000 1pt;border-right:solid #000000 1pt;border-bottom:solid #000000 1pt;border-top:solid #000000 1pt;vertical-align:top;padding:5pt 5pt 5pt 5pt;overflow:hidden;overflow-wrap:break-word;">
           <p style="line-height:1.2;text-align: center;margin-top:0pt;margin-bottom:0pt;" dir="ltr">
             <span
               style="font-size: 11pt; font-family: Arial; color: rgb(0, 0, 0); background-color: transparent; font-weight: 400; font-style: normal; font-variant: normal; text-decoration: none; vertical-align: baseline; white-space: pre-wrap;">
               <span style="border:none;display:inline-block;overflow:hidden;width:18px;height:11px;">
                 <img style="margin-left: 0px; margin-top: 0px;"
-                  src="/zm/ImageSignature?fileName=1683006113051015_1242424430.png&amp;accountId=1432297000000002002&amp;storeName=60010481625&amp;frm=s"
+                  src="https://raw.githubusercontent.com/idealdistribution/email-signature/main/icon-envelop.png"
                   width="18" height="11">
               </span>
             </span>
             <br>
           </p>
         </th>
-        <th scope="col" style="vertical-align:top;padding:5pt 5pt 5pt 5pt;overflow:hidden;overflow-wrap:break-word;">
+        <th scope="col"
+          style="border-left:solid #000000 1pt;border-right:solid #000000 1pt;border-bottom:solid #000000 1pt;border-top:solid #000000 1pt;vertical-align:top;padding:5pt 5pt 5pt 5pt;overflow:hidden;overflow-wrap:break-word;">
           <p style="line-height: 1.2; margin-top: 0pt; margin-bottom: 0pt; text-align: left;" dir="ltr"
             class="align-left">
             <span
@@ -101,7 +107,7 @@
             </span>
             <span
               style="font-size: 9pt; font-family: Poppins, sans-serif; color: rgb(0, 0, 0); background-color: transparent; font-weight: 400; font-style: normal; font-variant: normal; text-decoration: none; vertical-align: baseline; white-space: pre-wrap;">
-              <a target="_blank" href="mailto:info@idealdistribution.me" style="">
+              <a target="_blank" href="mailto:info@idealdistribution.me">
                 info@idealdistribution.me
               </a>
             </span>
@@ -109,20 +115,22 @@
         </th>
       </tr>
       <tr style="height:18pt">
-        <th scope="col" style="vertical-align:top;padding:5pt 5pt 5pt 5pt;overflow:hidden;overflow-wrap:break-word;">
+        <th scope="col"
+          style="border-left:solid #000000 1pt;border-right:solid #000000 1pt;border-bottom:solid #000000 1pt;border-top:solid #000000 1pt;vertical-align:top;padding:5pt 5pt 5pt 5pt;overflow:hidden;overflow-wrap:break-word;">
           <p style="line-height:1.2;text-align: center;margin-top:0pt;margin-bottom:0pt;" dir="ltr">
             <span
               style="font-size: 11pt; font-family: Arial; color: rgb(0, 0, 0); background-color: transparent; font-weight: 400; font-style: normal; font-variant: normal; text-decoration: none; vertical-align: baseline; white-space: pre-wrap;">
               <span style="border:none;display:inline-block;overflow:hidden;width:9px;height:15px;">
                 <img style="margin-left: 0px; margin-top: 0px;"
-                  src="/zm/ImageSignature?fileName=1683006113047010_1242424430.png&amp;accountId=1432297000000002002&amp;storeName=60010481625&amp;frm=s"
+                  src="https://raw.githubusercontent.com/idealdistribution/email-signature/main/icon-cursor.png"
                   width="9" height="15">
               </span>
             </span>
             <br>
           </p>
         </th>
-        <th scope="col" style="vertical-align:middle;padding:5pt 5pt 5pt 5pt;overflow:hidden;overflow-wrap:break-word;">
+        <th scope="col"
+          style="border-left:solid #000000 1pt;border-right:solid #000000 1pt;border-bottom:solid #000000 1pt;border-top:solid #000000 1pt;vertical-align:middle;padding:5pt 5pt 5pt 5pt;overflow:hidden;overflow-wrap:break-word;">
           <p style="line-height: 1.2; margin-top: 0pt; margin-bottom: 0pt; text-align: left;" dir="ltr"
             class="align-left">
             <span
@@ -136,20 +144,22 @@
         </th>
       </tr>
       <tr style="height:3.75pt">
-        <th scope="col" style="vertical-align:top;padding:5pt 5pt 5pt 5pt;overflow:hidden;overflow-wrap:break-word;">
+        <th scope="col"
+          style="border-left:solid #000000 1pt;border-right:solid #000000 1pt;border-bottom:solid #000000 1pt;border-top:solid #000000 1pt;vertical-align:top;padding:5pt 5pt 5pt 5pt;overflow:hidden;overflow-wrap:break-word;">
           <p style="line-height:1.2;text-align: center;margin-top:0pt;margin-bottom:0pt;" dir="ltr">
             <span
               style="font-size: 11pt; font-family: Arial; color: rgb(0, 0, 0); background-color: transparent; font-weight: 400; font-style: normal; font-variant: normal; text-decoration: none; vertical-align: baseline; white-space: pre-wrap;">
               <span style="border:none;display:inline-block;overflow:hidden;width:11px;height:15px;">
                 <img style="margin-left: 0px; margin-top: 0px;"
-                  src="/zm/ImageSignature?fileName=1683006113047038_1242424430.png&amp;accountId=1432297000000002002&amp;storeName=60010481625&amp;frm=s"
+                  src="https://raw.githubusercontent.com/idealdistribution/email-signature/main/icon-location.png"
                   width="11" height="15">
               </span>
             </span>
             <br>
           </p>
         </th>
-        <th scope="col" style="vertical-align:top;padding:5pt 5pt 5pt 5pt;overflow:hidden;overflow-wrap:break-word;">
+        <th scope="col"
+          style="border-left:solid #000000 1pt;border-right:solid #000000 1pt;border-bottom:solid #000000 1pt;border-top:solid #000000 1pt;vertical-align:top;padding:5pt 5pt 5pt 5pt;overflow:hidden;overflow-wrap:break-word;">
           <p style="line-height: 1.2; margin-top: 0pt; margin-bottom: 0pt; text-align: left;" dir="ltr"
             class="align-left">
             <span
@@ -170,14 +180,16 @@
     </thead>
     <tbody>
       <tr style="height:86.14892578125pt">
-        <td style="vertical-align:top;padding:5pt 5pt 5pt 5pt;overflow:hidden;overflow-wrap:break-word;" colspan="3">
+        <td
+          style="border-left:solid #000000 1pt;border-right:solid #000000 1pt;border-bottom:solid #000000 1pt;border-top:solid #000000 1pt;vertical-align:top;padding:5pt 5pt 5pt 5pt;overflow:hidden;overflow-wrap:break-word;"
+          colspan="3">
           <p style="line-height:1.2;margin-top:0pt;margin-bottom:0pt;" dir="ltr">
             <span
               style="font-size: 11pt; font-family: Arial; color: rgb(0, 0, 0); background-color: transparent; font-weight: 400; font-style: normal; font-variant: normal; text-decoration: none; vertical-align: baseline; white-space: pre-wrap;">
               <span style="border:none;display:inline-block;overflow:hidden;width:586px;height:168px;">
                 <img style="margin-left: 0px; margin-top: 0px;"
-                  src="/zm/ImageSignature?fileName=1683006113344023_1242424430.png&amp;accountId=1432297000000002002&amp;storeName=60010481625&amp;frm=s"
-                  width="586" height="168">
+                  src="https://raw.githubusercontent.com/idealdistribution/email-signature/main/footer.png"
+                  width="586" height="168" orig_width="1400" orig_height="400">
               </span>
             </span>
             <br>
